[gd_scene load_steps=17 format=3 uid="uid://dhv8vretxtnda"]

[ext_resource type="PackedScene" uid="uid://dg035xci6inme" path="res://Scene/InteractionPopup.tscn" id="1_ym7cb"]
[ext_resource type="Script" uid="uid://bd0nd8spp0khx" path="res://Scripts/Office/KeyboardInteraction.gd" id="2_uo47f"]
[ext_resource type="Texture2D" uid="uid://cr7oj2w3f7ttt" path="res://Assets/Office/Keyboard/KeyboardPad.webp" id="2_uxog4"]
[ext_resource type="Texture2D" uid="uid://7cniujpbfrol" path="res://Assets/Office/Keyboard/bKeycapIdle.webp" id="3_uo47f"]
[ext_resource type="Texture2D" uid="uid://ck3lpiks85v4y" path="res://Assets/Office/Keyboard/zKeycapIdle.webp" id="4_6gcap"]
[ext_resource type="Texture2D" uid="uid://c5pjwepgyitqx" path="res://Assets/Office/Keyboard/zKeycapPressed.png" id="5_hcf1d"]
[ext_resource type="Texture2D" uid="uid://b3w43qdwhsrd" path="res://Assets/Office/Keyboard/bKeycapPressed.png" id="6_lcdwr"]
[ext_resource type="Texture2D" uid="uid://bv11pi8v3os6i" path="res://Assets/Office/LeftLeg.webp" id="7_bubj6"]
[ext_resource type="Texture2D" uid="uid://b655wwjudcr6j" path="res://Assets/Office/RightLeg.webp" id="8_ju8a1"]
[ext_resource type="AudioStream" uid="uid://c7h34mjrabaxe" path="res://Assets/Audio/SFX/Office/Keyboard/1.wav" id="10_hcf1d"]
[ext_resource type="AudioStream" uid="uid://db5oh55kfw846" path="res://Assets/Audio/SFX/Office/Keyboard/2.wav" id="11_lcdwr"]

[sub_resource type="SystemFont" id="SystemFont_uo47f"]
font_names = PackedStringArray("OliveVTypewriter")
subpixel_positioning = 0

[sub_resource type="Animation" id="Animation_6gcap"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/LeftLeg:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.121325]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/LeftLeg:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/KeyboardPad/BKeycapIdle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/KeyboardPad/BKeycapPressed:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/LeftLeg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-114.618, -114.618)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/KeyboardPad/ZKeycapIdle:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/KeyboardPad/ZKeycapPressed:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 1,
"values": []
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/RightLeg:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(626.244, -155.696)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/RightLeg:rotation")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.22647]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/RightLeg:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.815242, 0.815242)]
}

[sub_resource type="Animation" id="Animation_b733f"]
resource_name = "bPressed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/LeftLeg:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.100081, 0.200081, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.121325, 0.226919, 0.226919, -0.121325]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/LeftLeg:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.100081, 0.200081, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1), Vector2(1, 1), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/KeyboardPad/BKeycapIdle:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/KeyboardPad/BKeycapPressed:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.233333, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/LeftLeg:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-114.618, -114.618), Vector2(-76.4119, -15.2824), Vector2(-76.4119, -15.2824), Vector2(-114.618, -114.618)]
}

[sub_resource type="Animation" id="Animation_hcf1d"]
resource_name = "zPressed"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/KeyboardPad/ZKeycapIdle:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/KeyboardPad/ZKeycapPressed:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.2, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/RightLeg:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.166667, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(626.244, -155.696), Vector2(641.86, -68.7707), Vector2(641.86, -68.7707), Vector2(626.244, -155.696)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/RightLeg:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.166667, 0.266667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [-0.22647, -0.572468, -0.572468, -0.22647]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Popup/PanelContainer/Background4/Control/Node2D/RightLeg:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.266667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.815242, 0.815242), Vector2(0.815242, 0.815242)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6nfxm"]
_data = {
&"RESET": SubResource("Animation_6gcap"),
&"bPressed": SubResource("Animation_b733f"),
&"zPressed": SubResource("Animation_hcf1d")
}

[node name="ComputerPopup" instance=ExtResource("1_ym7cb")]

[node name="Control" type="Control" parent="Popup/PanelContainer/Background4" index="0"]
layout_mode = 3
anchors_preset = 0
offset_left = 44.0
offset_top = 145.0
offset_right = 84.0
offset_bottom = 185.0
scale = Vector2(3.64189, 1.87667)
script = ExtResource("2_uo47f")

[node name="Node2D" type="Node2D" parent="Popup/PanelContainer/Background4/Control" index="0"]
position = Vector2(0.549165, 49.556)
scale = Vector2(0.071869, 0.13947)

[node name="KeyboardPad" type="Sprite2D" parent="Popup/PanelContainer/Background4/Control/Node2D" index="0"]
position = Vector2(273.333, -214.514)
scale = Vector2(0.662088, 0.662088)
texture = ExtResource("2_uxog4")

[node name="BKeycapIdle" type="Sprite2D" parent="Popup/PanelContainer/Background4/Control/Node2D/KeyboardPad" index="0"]
texture = ExtResource("3_uo47f")

[node name="ZKeycapIdle" type="Sprite2D" parent="Popup/PanelContainer/Background4/Control/Node2D/KeyboardPad" index="1"]
texture = ExtResource("4_6gcap")

[node name="ZKeycapPressed" type="Sprite2D" parent="Popup/PanelContainer/Background4/Control/Node2D/KeyboardPad" index="2"]
visible = false
texture = ExtResource("5_hcf1d")

[node name="BKeycapPressed" type="Sprite2D" parent="Popup/PanelContainer/Background4/Control/Node2D/KeyboardPad" index="3"]
visible = false
texture = ExtResource("6_lcdwr")

[node name="LeftLeg" type="Sprite2D" parent="Popup/PanelContainer/Background4/Control/Node2D" index="1"]
position = Vector2(-114.618, -114.618)
rotation = -0.121325
texture = ExtResource("7_bubj6")

[node name="RightLeg" type="Sprite2D" parent="Popup/PanelContainer/Background4/Control/Node2D" index="2"]
position = Vector2(626.244, -155.696)
rotation = -0.22647
scale = Vector2(0.815242, 0.815242)
texture = ExtResource("8_ju8a1")

[node name="ScreenText" type="Label" parent="Popup/PanelContainer/Background4" index="1"]
texture_filter = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -82.5
offset_top = 10.0
offset_right = 331.5
offset_bottom = 264.0
grow_horizontal = 2
scale = Vector2(0.40314, 0.394335)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_uo47f")
theme_override_font_sizes/font_size = 61
autowrap_mode = 1
text_overrun_behavior = 3

[node name="KeyboardAnimation" type="AnimationPlayer" parent="." index="2"]
libraries = {
&"": SubResource("AnimationLibrary_6nfxm")
}

[node name="Sound1" type="AudioStreamPlayer2D" parent="." index="3"]
position = Vector2(333, 80)
stream = ExtResource("10_hcf1d")

[node name="Sound2" type="AudioStreamPlayer2D" parent="." index="4"]
position = Vector2(332, 82)
stream = ExtResource("11_lcdwr")

[connection signal="gui_input" from="Popup/PanelContainer/Background4/Control" to="Popup/PanelContainer/Background4/Control" method="_on_gui_input"]
